# imageDrawer

./: .flutter-plugins-dependencies  .gitignore  ARCHITECTURE.md  BUILDING.md  Makefile  PITCH.md  QUICKSTART.md  README.md  ROADMAP.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/chrome-device/Default/: DIPS  (+14 more)
examples/: clideck_build.yaml  clideck_deploy.yaml  clideck_dev.yaml  curl_download.yaml  ffmpeg_audio.yaml  git_clone.yaml  imagemagick_resize.yaml
examples/aicard/: install.yaml  run.yaml  test.yaml
examples/clideck/: clideck_full_deploy.yaml
examples/harmonic-melody-generator/: build.yaml  build_and_deploy.yaml  clean.yaml  deploy.yaml  run.yaml  test.yaml
examples/my-yml-db/: install.yaml  run.yaml
examples/songs/: update_metadata.yaml
examples/wyldcard/: build.yaml  bundle.yaml  clean.yaml  run.yaml  test.yaml
examples/wyldcard-python/: build_parser.yaml  install.yaml  test.yaml
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: Info.plist
lib/: drawing_animation.dart  gif_exporter.dart  main.dart  svg_exporter.dart  vector_converter.dart  vector_path.dart
macos/Runner.xcodeproj/: project.pbxproj
scripts/: generate_icons.sh
src-tauri/: Cargo.toml  entitlements.debug.plist  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: executor.rs  main.rs  presets.rs  registry.rs  sandbox.rs  schema.rs
test/: widget_test.dart
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css  types.ts
web/: index.html  manifest.json
(+56 files in other folders)
