[package]
name = "clideck"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.35", features = ["full"] }
which = "6.0"
dirs = "5.0"
thiserror = "1.0"
lazy_static = "1.4"
uuid = { version = "1.6", features = ["v4"] }
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }

[features]
custom-protocol = ["tauri/custom-protocol"]
